python/testData/inspections/addClassToPackageInFromImport/addClassToPackageInFromImport.py
from mypack import <error descr="Cannot find reference 'Clzz' in '__init__.py'"><caret>Clzz</error>

clzz = Clzz()